--- a/natural_scene_prediction.ipynb
+++ b/natural_scene_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,15 @@
     "\n",
     "\n",
     "def prepare_pred_dataset_from_fps(list_of_fp : [list], BATCH_SIZE : int = 32):\n",
+    "    \n",
     "    \"\"\"\n",
     "    [ Reads a list of image filepaths and preprocess them for the image classifer model.\n",
     "      Order of the list] of filepaths is preserved.]\n",
     "\n",
     "    Args:\n",
     "        list_of_fp ([list]): [list of image filepaths]\n",
-    "        BATCH_SIZE (int): BATCH_SIZE for prediction, this can be changed according to GPU capacity, lower the batch size if run into OOM during prediction\n",
+    "        BATCH_SIZE (int): BATCH_SIZE for prediction.\n",
+    "        Lower the batch size if run into OOM during prediction\n",
     "\n",
     "    Returns:\n",
     "        [Tensorflow Dataset]\n",
@@ -42,18 +44,24 @@
     "    return img_ds\n",
     "\n",
     "def decode_prediction(pred_array,top_n = 5, thresohold = 0.5):\n",
+    "    \n",
     "    \"\"\"[Decode n x 22 predicton array from the classifier model]\n",
     "\n",
     "    Args:\n",
-    "        pred_array ([type]): [description]\n",
-    "        top_n (int, optional): [multilabel_pred_top_n returns top_n prediction of the multilabel branch, regardless the confidence level of individual prediction]. Defaults to 5.\n",
-    "        thresohold (float, optional): [multilabel_pred_over_threshold returns only prediction with confidence over the thresohold]. Defaults to 0.5.\n",
+    "        pred_array ([np.array]): [raw prediction array from model prediction]\n",
+    "        \n",
+    "        top_n (int, optional): \n",
+    "        [top_n prediction of the multilabel branch, regardless the confidence level of individual prediction]. \n",
+    "        Defaults to 5.\n",
+    "        \n",
+    "        thresohold (float, optional): [Thresohold of multilabel prediction]. Defaults to 0.5.\n",
     "    Returns:\n",
-    "    [list of decoded predictions]: [Decoded predictions would return THREE lists in form of:\n",
-    "                                    [threeclass_pred_n_prob_paired],[multilabel_pred_top_n], [multilabel_pred_over_threshold]\n",
-    "                                    eg: threeclass_pred_n_prob_paired[0],[multilabel_pred_top_n[0], [multilabel_pred_over_threshold[0] = predictions of the first image of the image predicted] \n",
+    "    [three list of decoded predictions]: \n",
+    "    [Decoded predictions would return THREE lists in form of:\n",
+    "    [threeclass_pred_n_prob_paired],[multilabel_pred_top_n], [multilabel_pred_over_threshold]\n",
     "    \"\"\"    \n",
-    "    def multilabel_over_threshold_predictions(multilabel_pred_array,thresohold=0.5):\n",
+    "    \n",
+    "    def multilabel_over_threshold_predictions(multilabel_pred_array,thresohold):\n",
     "        # map labels to predictions > thresohold\n",
     "        idx_with_conf = np.where(multilabel_pred_array>thresohold)[0] # find the index of element > thresohold\n",
     "        pred_label = list(map(multilabel_class_index.get, idx_with_conf)) \n",
@@ -100,29 +108,20 @@
     "    multilabel_pred_over_threshold = [multilabel_over_threshold_predictions(p,thresohold) for p in multilabel_pred] # multilabel predictions over threshold (0.5)\n",
     "    multilabel_pred_top_n = [multilabel_top_n_predictions(p,top_n) for p in multilabel_pred] # top n multilabel predictions \n",
     "    \n",
-    "    return threeclass_pred_n_prob_paired,multilabel_pred_top_n, multilabel_pred_over_threshold\n",
-    "\n",
-    "check_list = [ os.path.join('check',f) for f in os.listdir('check')]\n",
-    "pred_ds = predict_dataset_from_fps(check_list)\n",
-    "scenery_model = tf.keras.models.load_model('natural_scene_model.h5')\n",
-    "pred_vector = scenery_model.predict(pred_ds,verbose=1) # the prediction vector is a n x 22 array, n as in number of images predicted, 22 as 3class + 19 classes multilabel\n",
-    "\n",
-    "pred1,pred2,pred3 = decode_prediction(pred_vector)"
+    "    return threeclass_pred_n_prob_paired,multilabel_pred_top_n, multilabel_pred_over_threshold"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pred_ds = predict_dataset_from_fps(image_fps)\n",
+    "scenery_model = tf.keras.models.load_model('natural_scene_model.h5')\n",
+    "pred_vector = scenery_model.predict(pred_ds,verbose=1) # the prediction vector is a n x 22 array, n as in number of images predicted, 22 as 3class + 19 classes multilabel\n",
+    "pred1,pred2,pred3 = decode_prediction(pred_vector)"
+   ]
   }
  ],
  "metadata": {
