--- a/natural_scene_prediction.ipynb
+++ b/natural_scene_prediction.ipynb
@@ -8,11 +8,11 @@
    "source": [
     "import os\n",
     "import json\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import typing\n",
     "import tensorflow as tf\n",
     "import efficientnet.tfkeras as effn\n",
+    "\n",
     "AUTO = tf.data.experimental.AUTOTUNE\n",
     "\n",
     "\n",
@@ -75,7 +75,7 @@
     "        label_prob = multilabel_pred_array[sorted_top5_pred]\n",
     "        return dict(list(zip(pred_label,np.round(label_prob,4))))\n",
     "\n",
-    "    threeclass_map = {0:'nature',1:'indoor',2:'ambiguous'} \n",
+    "    threeclass_class_index = {0:'nature',1:'indoor',2:'ambiguous'} \n",
     "    multilabel_class_index = {0: 'indoor',\n",
     "                             1: 'outdoor, natural',\n",
     "                             2: 'outdoor, man-made',\n",
@@ -99,7 +99,7 @@
     "    # decode three class classifier\n",
     "    threeclass_pred = np.array([p[:3]for p in pred_vector]) # first 3 element = predicion of the 3 class classifier\n",
     "    threeclass_pred_argmax = threeclass_pred.argmax(axis=-1) # take the highest probability of 3 class as predicted class\n",
-    "    threeclass_pred_label = list(map(threeclass_map.get,threeclass_pred_argmax)) # map class index to label\n",
+    "    threeclass_pred_label = list(map(threeclass_class_index.get,threeclass_pred_argmax)) # map class index to label\n",
     "    threeclass_pred_prob = [threeclass_pred[i][threeclass_pred_argmax[i]] for i in range(len(threeclass_pred_argmax))] # retrieve the probability of the \n",
     "    threeclass_pred_n_prob_paired = list(zip(threeclass_pred_label,threeclass_pred_prob)) #a pair of predicted label and its corresponding probability \n",
     "    \n",
@@ -114,11 +114,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "pred_ds = predict_dataset_from_fps(image_fps)\n",
-    "scenery_model = tf.keras.models.load_model('natural_scene_model.h5')\n",
+    "image_fps = [r\"C:\\Users\\Angus\\Desktop\\natural_scenery_archive\\natural_scenc_imgs\\1836297586463755622.jpg\",     r\"C:\\Users\\Angus\\Desktop\\natural_scenery_archive\\natural_scenc_imgs\\1836367351983661100.jpg\"]\n",
+    "model_path = r\"C:\\Users\\Angus\\Desktop\\natural_scenery_archive\\natural_scene_model.h5\"\n",
+    "pred_ds = prepare_pred_dataset_from_fps(image_fps)\n",
+    "scenery_model = tf.keras.models.load_model(model_path)\n",
     "pred_vector = scenery_model.predict(pred_ds,verbose=1) # the prediction vector is a n x 22 array, n as in number of images predicted, 22 as 3class + 19 classes multilabel\n",
     "pred1,pred2,pred3 = decode_prediction(pred_vector)"
    ]
