--- a/natural_scene_prediction.ipynb
+++ b/natural_scene_prediction.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run in notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -119,12 +126,29 @@
    },
    "outputs": [],
    "source": [
-    "image_fps = [r\"C:\\Users\\Angus\\Desktop\\natural_scenery_archive\\natural_scenc_imgs\\1836297586463755622.jpg\",     r\"C:\\Users\\Angus\\Desktop\\natural_scenery_archive\\natural_scenc_imgs\\1836367351983661100.jpg\"]\n",
-    "model_path = r\"C:\\Users\\Angus\\Desktop\\natural_scenery_archive\\natural_scene_model.h5\"\n",
+    "image_fps = [...,...]\n",
+    "model_path = 'model_path'\n",
     "pred_ds = prepare_pred_dataset_from_fps(image_fps)\n",
     "scenery_model = tf.keras.models.load_model(model_path)\n",
     "pred_vector = scenery_model.predict(pred_ds,verbose=1) # the prediction vector is a n x 22 array, n as in number of images predicted, 22 as 3class + 19 classes multilabel\n",
     "pred1,pred2,pred3 = decode_prediction(pred_vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Or import predictor.py as module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scene_classifier\n",
+    "pred1,pred,pred3 = scene_classifier.run_classifier(img_fps,model_path)"
    ]
   }
  ],
